Tue Aug 25 16:41:53 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Fixed wording about building the workspace.

        * run_tests.pl:

          Consolidated the vc7 - vc8 build code and added vc9 and vc10.
          Added more files for automake and allowed the wb26 project type.

        * expected/MultiWS/*:
        * expected/aggregated/html/dir1/dir2/foo.html:
        * expected/backwards/*:
        * expected/more_options/*:
        * expected/template_input/*:
        * tests/MultiWS/Multiws/src/bar.mpc:
        * tests/MultiWS/build_entry.txt:
        * tests/aggregated/dir1/bar.mwc:
        * tests/aggregated/dir1/dir2/foo.mpc:
        * tests/aggregated/dir1/other:
        * tests/aggregated/dir1/other/nothing.mpb:
        * tests/backwards:
        * tests/backwards/additional_options.txt:
        * tests/backwards/build_entry.txt:
        * tests/backwards/down:
        * tests/backwards/down/two:
        * tests/backwards/down/two/two.mwc:
        * tests/backwards/foo.cpp:
        * tests/backwards/foo.mpc:
        * tests/command_helper/additional_options.txt:
        * tests/command_helper/build_entry.txt:
        * tests/exclude/additional_options.txt:
        * tests/exclude/exclude.mwc:
        * tests/exclude/three:
        * tests/exclude/three/three.cpp:
        * tests/exclude/three/three.mpc:
        * tests/features_custom_only/bin/exercise.pl:
        * tests/features_custom_only/config/two.mpb:
        * tests/flex_bison/build_entry.txt:
        * tests/flex_bison/flex_bison.mpc:
        * tests/more_options:
        * tests/more_options/additional_options.txt:
        * tests/more_options/another:
        * tests/more_options/another/another.mpc:
        * tests/more_options/another/zzz.cpp:
        * tests/more_options/c++:
        * tests/more_options/c++/foo.cpp:
        * tests/more_options/c++/foo.mpc:
        * tests/more_options/java:
        * tests/more_options/java/j.mpc: