@@ -1,0 +1,64 @@
+AC_INIT(All_Multiws, 1.0)
+AM_INIT_AUTOMAKE([1.9])
+
+AC_PROG_CXX
+AC_PROG_CXXCPP
+AC_PROG_LIBTOOL
+
+AM_CONDITIONAL(BUILD_ACE_FLREACTOR, true)
+AM_CONDITIONAL(BUILD_ACE_FOR_TAO, false)
+AM_CONDITIONAL(BUILD_ACE_QTREACTOR, true)
+AM_CONDITIONAL(BUILD_ACE_SVCCONF, true)
+AM_CONDITIONAL(BUILD_ACE_TKREACTOR, true)
+AM_CONDITIONAL(BUILD_ACE_TOKEN, true)
+AM_CONDITIONAL(BUILD_ACE_XTREACTOR, true)
+AM_CONDITIONAL(BUILD_ACEXML, true)
+AM_CONDITIONAL(BUILD_ATHENA, true)
+AM_CONDITIONAL(BUILD_AUTOMAKE, true)
+AM_CONDITIONAL(BUILD_BOOST, true)
+AM_CONDITIONAL(BUILD_CIDL, false)
+AM_CONDITIONAL(BUILD_CORBA_E_COMPACT, false)
+AM_CONDITIONAL(BUILD_CORBA_E_MICRO, false)
+AM_CONDITIONAL(BUILD_DUMMY_LABEL, false)
+AM_CONDITIONAL(BUILD_FL, true)
+AM_CONDITIONAL(BUILD_GL, true)
+AM_CONDITIONAL(BUILD_IPV6, false)
+AM_CONDITIONAL(BUILD_JAVA, true)
+AM_CONDITIONAL(BUILD_LINK_CODECFACTORY, false)
+AM_CONDITIONAL(BUILD_MFC, false)
+AM_CONDITIONAL(BUILD_MICO, false)
+AM_CONDITIONAL(BUILD_MINIMUM_CORBA, false)
+AM_CONDITIONAL(BUILD_MOTIF, true)
+AM_CONDITIONAL(BUILD_NEGOTIATE_CODESETS, false)
+AM_CONDITIONAL(BUILD_OMNIORB, false)
+AM_CONDITIONAL(BUILD_QOS, false)
+AM_CONDITIONAL(BUILD_QT, true)
+AM_CONDITIONAL(BUILD_RAPI, false)
+AM_CONDITIONAL(BUILD_REPO, false)
+AM_CONDITIONAL(BUILD_RPC, false)
+AM_CONDITIONAL(BUILD_SCTP, false)
+AM_CONDITIONAL(BUILD_SSL, true)
+AM_CONDITIONAL(BUILD_STATIC_LIBS_ONLY, false)
+AM_CONDITIONAL(BUILD_STL, true)
+AM_CONDITIONAL(BUILD_TAO_FLRESOURCE, true)
+AM_CONDITIONAL(BUILD_TAO_NO_IIOP, false)
+AM_CONDITIONAL(BUILD_TAO_QTRESOURCE, true)
+AM_CONDITIONAL(BUILD_TAO_TKRESOURCE, true)
+AM_CONDITIONAL(BUILD_TAO_XTRESOURCE, true)
+AM_CONDITIONAL(BUILD_TK, true)
+AM_CONDITIONAL(BUILD_USES_WCHAR, false)
+AM_CONDITIONAL(BUILD_VCL, false)
+AM_CONDITIONAL(BUILD_VERSIONED_NAMESPACE, false)
+AM_CONDITIONAL(BUILD_WINCE, false)
+AM_CONDITIONAL(BUILD_WXWINDOWS, true)
+AM_CONDITIONAL(BUILD_X11, true)
+AM_CONDITIONAL(BUILD_XERCES3, false)
+AM_CONDITIONAL(BUILD_XT, true)
+AM_CONDITIONAL(BUILD_ZIP_WRAPPER, false)
+AM_CONDITIONAL(BUILD_ZIPARCHIVE, false)
+AM_CONDITIONAL(BUILD_ZLIB, true)
+AM_CONDITIONAL(BUILD_ZZIP, true)
+
+m4_include([configure.ac.Makefiles])
+
+AC_OUTPUT
