@@ -6,7 +6,7 @@ Microsoft eMbedded Visual Tools Workspace File, Format Version 3.00
 # this file will be lost the next time it is generated.
 #
 # MPC Command:
-# /tao_builds/chad/doc/build/linux/ACE/bin/mwc.pl -include config -type em3 -recurse -name_modifier "*_testing"
+# /tao_builds/chad/ocitao/ACE_wrappers/build/linux/bin/mwc.pl -include config -type em3 -recurse -name_modifier "*_testing"
 
 ###############################################################################
 
