@@ -2,7 +2,7 @@
 <html>
 <!-- $Id$ -->
 <!-- MPC Command: -->
-<!-- /tao_builds/chad/doc/build/linux/ACE/bin/mwc.pl -include config -type html -recurse -name_modifier "*_testing" -->
+<!-- /tao_builds/chad/ocitao/ACE_wrappers/build/linux/bin/mwc.pl -include config -type html -recurse -name_modifier "*_testing" -->
 <head>
 <title>All_Multiws</title>
   <style type="text/css">
